# daqd

./: .gitignore  CMakeLists.txt  CMakeSettings.json  toolchain-rpi.cmake
include/cereal/: inlineshim.hpp
include/cereal/archives/: json.hpp
scripts/: INSTRUCTIONS.md  daqd.service
sockpp/: CMakeLists.txt
src/: COMPILE_OPTS.h  DaqArgs.cpp  DaqArgs.h  DaqDevice.h  DaqItem.cpp  DaqItem.h  DaqState.cpp  DaqState.h  SocketHandler.h  main.cpp  poll.cpp  poll.h  rpcs.h  socketHandler.cpp  utils.cpp  utils.h
src/dataclasses/: DaqConfigJson.h  DeviceJson.h  ItemJson.h  PollMode.h
src/devices/: ModbusDevice.cpp  ModbusDevice.h  SineDevice.cpp  SineDevice.h  getDevice.h
